pycasso (0.2)

  * Complete event system defined
  * SDL event system implemented
  * Basic class: Window
  * Canvas becomes Layer
  * Image removed, replaced by Layer
  * createPNGLayer() and drawLayer()
  * demo2
  * demo3
  * Color functions
  * PycassoException

pycasso (0.1) unstable developer release
13-Aug-2007

  * First pycasso file release! :)
  * Basic classes: Pycasso, Canvas, Image and EventQ
  * Some drawing primitives: drawPoint(), drawLine(), drawTriangle(),
  drawFilledTriangle(), drawFilledSquare(), drawFilledCircle()
  * Set line width and point size
  * Set background and foreground colors for drawing
  * Load and draw png images
  * Skeleton event system with the QUIT event supported
  * SDL_OPENGL system only for now
  * Basic demo1 with a moving circle