@@ -30,16 +30,16 @@ IF(SYSTEM_SDLOPENGL)
 		src/EventQSDL.cpp)
 
 	SET(DEFINITIONS ${DEFINITIONS} -D__PYCASSO_SYSTEM_SDLOPENGL)
-
 	SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${SDL_INCLUDE_DIR})
+	SET(PYCASSO_LINK_LIBRARIES ${PYCASSO_LINK_LIBRARIES} SDL GL GLU png)
 ENDIF(SYSTEM_SDLOPENGL)
 
 ADD_DEFINITIONS(${DEFINITIONS})
 
 INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
 
-ADD_LIBRARY(pycasso STATIC ${SOURCE_FILES})
-TARGET_LINK_LIBRARIES(pycasso SDL GL GLU png)
+ADD_LIBRARY(pycasso SHARED ${SOURCE_FILES})
+TARGET_LINK_LIBRARIES(pycasso ${PYCASSO_LINK_LIBRARIES})
 
 ADD_EXECUTABLE(demo1 demos/demo1.cpp)
 TARGET_LINK_LIBRARIES(demo1 pycasso)
