@@ -1,6 +1,5 @@
 == TODO ==
 
-* Error handling
 * Font drawing
 * All drawing primitives
 * Draw pixel matrix
