@@ -24,7 +24,7 @@ public:
 	Window();
 	virtual ~Window();
 
-	virtual bool init(int width,
+	virtual void init(int width,
         		        int height,
 				bool fullScreen=false,
 		                int colorDepth=0,
