@@ -1,0 +1,8 @@
+%Module pyc 0
+
+%Include mapped_types.sip
+%Include Pycasso.sip
+%Include Window.sip
+%Include EventQ.sip
+%Include pyc_types.sip
+%Include Layer.sip
